--- a/package.json
+++ b/package.json
@@ -1,4 +1,26 @@
 {
   "name": "discharge-ingestion",
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
+    "body-parser": "^1.20.3",
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.80.1",
+    "pdf-parse": "^1.1.1",
+    "twilio": "^5.4.3"
+  },
+  "scripts": {
+    "start": "node server/index.js",
+    "client": "yarn --cwd client start",
+    "dev": "concurrently \"yarn start\" \"yarn client\""
+  },
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
+  ]
 }
