--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "twilio": "^5.4.3"
   },
   "scripts": {
-    "start": "node server/index.js",
-    "client": "yarn --cwd client start",
-    "dev": "concurrently \"yarn start\" \"yarn client\""
+    "start": "concurrently \"yarn server\" \"yarn client\"",
+    "server": "node server/index.js",
+    "client": "yarn --cwd client start"
   },
   "private": true,
   "workspaces": [
